--- a/src/main/resources/crds/v1alpha1-awxconnection-crd.yaml
+++ b/src/main/resources/crds/v1alpha1-awxconnection-crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: awxinstances.wolkenzentrale.de
+  name: awxconnections.wolkenzentrale.de
 spec:
   group: wolkenzentrale.de
   versions:
@@ -82,7 +82,7 @@ spec:
                         type: string
                         description: "Human-readable message about the condition"
                 
-                # AwxInstanceStatus specific fields
+                # AwxConnectionStatus specific fields
                 connectionStatus:
                   type: string
                   description: "The current connection status to the AWX instance (Connected, Disconnected, Error)"
@@ -112,8 +112,8 @@ spec:
         status: {}
   scope: Namespaced
   names:
-    plural: awxinstances
-    singular: awxinstance
-    kind: AwxInstance
+    plural: awxconnections
+    singular: awxconnection
+    kind: AwxConnection
     shortNames:
-      - awxi 
+      - awxc 
