--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -137,7 +137,7 @@ spec:
           type: RuntimeDefault
       containers:
       - name: manager
-        image: ghcr.io/wolkenzentrale/awx-operator:latest
+        image: quay.io/wolkenzentrale/awx-operator:main
         imagePullPolicy: Always
         securityContext:
           allowPrivilegeEscalation: false
