--- a/argocd/awx-operator-dev-app.yaml
+++ b/argocd/awx-operator-dev-app.yaml
@@ -27,7 +27,7 @@ spec:
     kustomize:
       # 🖼️ Always use latest image for development
       images:
-        - ghcr.io/wolkenzentrale/awx-operator:latest
+        - quay.io/wolkenzentrale/awx-operator:latest
       
       # 🏷️ Development labels
       commonLabels:
